// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`select-wrapper dropdown accessibility should expose correct accessibility tree if description is set 1`] = `
{
  "description": "Some description",
  "haspopup": "listbox",
  "name": "Option A, Some label",
  "role": "combobox",
}
`;

exports[`select-wrapper dropdown accessibility should expose correct accessibility tree if open/closed: After click 1`] = `
{
  "expanded": true,
  "haspopup": "listbox",
  "name": "Option A, Some label",
  "role": "combobox",
}
`;

exports[`select-wrapper dropdown accessibility should expose correct accessibility tree if open/closed: Initially 1`] = `
{
  "haspopup": "listbox",
  "name": "Option A, Some label",
  "role": "combobox",
}
`;

exports[`select-wrapper dropdown accessibility should expose correct accessibility tree if rendered with optgroups 1`] = `
{
  "children": [
    {
      "haspopup": "listbox",
      "name": "Option A, Some label",
      "role": "combobox",
    },
    {
      "children": [
        {
          "role": "none",
        },
      ],
      "role": "none",
    },
    {
      "children": [
        {
          "name": "Some optgroup label 1",
          "role": "StaticText",
        },
        {
          "children": [
            {
              "name": "Option A",
              "role": "StaticText",
            },
            {
              "children": [
                {
                  "children": [
                    {
                      "children": [
                        {
                          "role": "none",
                        },
                      ],
                      "role": "none",
                    },
                  ],
                  "role": "none",
                },
              ],
              "role": "none",
            },
          ],
          "name": "Option A",
          "role": "option",
          "selected": true,
        },
        {
          "children": [
            {
              "name": "Option B",
              "role": "StaticText",
            },
          ],
          "name": "Option B",
          "role": "option",
        },
        {
          "name": "Some optgroup label 1",
          "role": "StaticText",
        },
        {
          "children": [
            {
              "name": "Option A",
              "role": "StaticText",
            },
          ],
          "name": "Option A",
          "role": "option",
        },
        {
          "children": [
            {
              "name": "Option B",
              "role": "StaticText",
            },
          ],
          "name": "Option B",
          "role": "option",
        },
      ],
      "name": "Some label",
      "orientation": "vertical",
      "role": "listbox",
    },
  ],
  "name": "",
  "role": "generic",
}
`;

exports[`select-wrapper dropdown accessibility should expose correct accessibility tree in error state 1`] = `
{
  "haspopup": "listbox",
  "name": "Option A, Some label. Some error message",
  "role": "combobox",
}
`;

exports[`select-wrapper dropdown accessibility should expose correct accessibility tree on selected custom option on click: Initially option A 1`] = `
{
  "name": "Option A",
  "role": "option",
  "selected": true,
}
`;

exports[`select-wrapper dropdown accessibility should expose correct accessibility tree on selected custom option on click: Initially option B 1`] = `
{
  "name": "Option B",
  "role": "option",
}
`;

exports[`select-wrapper dropdown accessibility should expose correct accessibility tree on selected custom option on click: Option A after click 1`] = `
{
  "name": "Option A",
  "role": "option",
}
`;

exports[`select-wrapper dropdown accessibility should expose correct accessibility tree on selected custom option on click: Option B after click 1`] = `
{
  "name": "Option B",
  "role": "option",
  "selected": true,
}
`;

exports[`select-wrapper dropdown accessibility should expose correct initial accessibility tree and aria properties 1`] = `
{
  "children": [
    {
      "haspopup": "listbox",
      "name": "Option A, Some label",
      "role": "combobox",
    },
    {
      "children": [
        {
          "role": "none",
        },
      ],
      "role": "none",
    },
    {
      "children": [
        {
          "children": [
            {
              "name": "Option A",
              "role": "StaticText",
            },
            {
              "children": [
                {
                  "children": [
                    {
                      "children": [
                        {
                          "role": "none",
                        },
                      ],
                      "role": "none",
                    },
                  ],
                  "role": "none",
                },
              ],
              "role": "none",
            },
          ],
          "name": "Option A",
          "role": "option",
          "selected": true,
        },
        {
          "children": [
            {
              "name": "Option B",
              "role": "StaticText",
            },
          ],
          "disabled": true,
          "name": "Option B",
          "role": "option",
        },
        {
          "children": [
            {
              "name": "Option C",
              "role": "StaticText",
            },
          ],
          "name": "Option C",
          "role": "option",
        },
      ],
      "name": "Some label",
      "orientation": "vertical",
      "role": "listbox",
    },
  ],
  "name": "",
  "role": "generic",
}
`;
